test/sema/lambda-infer-parameter-type-fail.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:13: error: couldn't infer type for parameter 'b'
    var a = b -> b;
}
